# nvnodetop

./: .gitignore  CHANGELOG.md  README.md  nvnodetop.sh  pyproject.toml
.github/workflows/: build.yml  ci.yml  publish.yml
nvnodetop/: __init__.py  _launcher.py
src/nvnodetop/: nvnodetop.sh
