[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nvnodetop"
version = "0.1.1"
description = "nvtop-inspired real-time GPU monitor for SLURM HPC clusters"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "whats2000" }]
keywords = ["nvidia", "gpu", "slurm", "hpc", "monitor", "nvtop", "cluster"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/whats2000/nvnodetop"
Repository = "https://github.com/whats2000/nvnodetop"
Issues = "https://github.com/whats2000/nvnodetop/issues"
Changelog = "https://github.com/whats2000/nvnodetop/blob/main/CHANGELOG.md"

[project.scripts]
nvnodetop = "nvnodetop._launcher:main"

[tool.hatch.build.targets.wheel]
packages = ["nvnodetop"]

# Bundle the single root script into the installed package — no copy needed
[tool.hatch.build.targets.wheel.force-include]
"nvnodetop.sh" = "nvnodetop/nvnodetop.sh"

# Ensure the script is also included in the source distribution
[tool.hatch.build.targets.sdist]
include = [
    "nvnodetop/",
    "nvnodetop.sh",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]
